--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,18 @@
 {
   "version": 2,
   "functions": {
-    "src/server.js": {
+    "api/index.js": {
       "maxDuration": 30
     }
   },
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "src/server.js"
+      "dest": "/$1"
     }
   ],
   "env": {
